<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mauto.bigbaby.ut.BigUnitTestActivity">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:text="Hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/lv_sample"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"></ListView>
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sample"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_fill_data"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:layout_margin="8dp"
        android:text="Fill data"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:onClick="onClickFillData" />


</LinearLayout>
